deployment-approach/blue-green-release/blue-green-phase2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote-ingress-blue-green
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: blue-green.example.com
    http:
      paths:
      - backend:
          serviceName: vote-bg
          servicePort: 80
